Bug 155343 - Display changes to table columns in tooltip.
Summary: Display changes to table columns in tooltip.
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
7.6.0.0 alpha1+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.6.0
Keywords:
Depends on:
Blocks: Track-Changes-Table
  Show dependency treegraph
 
Reported: 2023-05-16 07:54 UTC by NISZ LibreOffice Team
Modified: 2023-05-25 09:26 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2023-05-16 07:54:02 UTC
Description:
Show changes created in table columns in tooltip.

Steps to Reproduce:
1. Insert a 3x3 table
2. Edit -> track changes -> Record ON (and show ON)
3. Delete a column with delete column button

Actual Results:
Changes to the table columns are not shown in the tooltip.

Expected Results:
Display changes to table columns in tooltip.


Reproducible: Always


User Profile Reset: No

Additional Info:
Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 6f1534940ac12ff8e46f4782e18cfb6cf585da39
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Vulkan; VCL: win
Locale: en-US (hu_HU); UI: en-US
Calc: CL threaded
Comment 1 Commit Notification 2023-05-19 14:11:05 UTC
László Németh committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/5facae7614a1a82ed51241f50cec8e82bfb2cbda

tdf#155343 sw tracked table column: add tooltip

It will be available in 7.6.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 2 NISZ LibreOffice Team 2023-05-25 09:26:50 UTC
Verified in:
Version: 7.6.0.0.alpha1+ (X86_64) / LibreOffice Community
Build ID: 73a82b425b4dc02ef4ad3946b71c067a6411045c
CPU threads: 4; OS: Windows 10.0 Build 19044; UI render: Skia/Raster; VCL: win
Locale: hu-HU (hu_HU); UI: en-US
Calc: CL threaded