tdf#155343 sw tracked table column: add tooltip

Tooltip of a deleted table column shows "Column Deleted",
an inserted table column (will) show "Column Inserted".

Follow-up to commit ffd8d20d368a885d6d786749278fa438573227a7
"tdf#150673 sw xmloff: import/export tracked table column" and
commit 84fbb3398f7486f00e7b7dea415e1ea2510a9535
"tdf#146144 sw: add tooltip to table rows with change tracking".

Change-Id: I79fd2397410328b320bd2536285cc5cc835da9fd
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/151998
Tested-by: László Németh <nemeth@numbertext.org>
Reviewed-by: László Németh <nemeth@numbertext.org>